CostalCloud/force-app/main/default/objects/SF_Integration_Log__c.object
<CustomObject>
    <fields>
        <fullName>Database_Name__c</fullName>
        <label>Database Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>THD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>THD --&gt; SF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Errors__c</fullName>
        <label>Errors</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Type__c</fullName>
        <label>Integration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Work Orders</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to link up the Error Message to a particular Salesforce Work Order if appropriate.
Used for when data is being sent to THD (The Home Depot) and data is not sent from Salesforce. This will log it down in the system</description>
        <label>Related Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>SF Integration Logs</relationshipLabel>
        <relationshipName>SF_Integration_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Store_No__c</fullName>
        <label>Store No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SF Integration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Database_Name__c</columns>
        <columns>Direction__c</columns>
        <columns>Integration_Type__c</columns>
        <columns>Errors__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllToday</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Database_Name__c</columns>
        <columns>Direction__c</columns>
        <columns>Integration_Type__c</columns>
        <columns>Errors__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All - Today</label>
    </listViews>
    <nameField>
        <label>SF Integration Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SF Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>