CostalCloud/force-app/main/default/objects/SF_Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Database_Name__c</columns>
    <columns>PO_Number__c</columns>
    <columns>Store_No__c</columns>
    <columns>Direction__c</columns>
    <columns>Integration_Type__c</columns>
    <columns>Errors__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>